--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib"]
 [profile.release]
 lto = true
 opt-level = 'z' # Using z reduces the bundle size with another 1.5Mb
-codegen-units = 1 # This should apparently bring down binary size even more, but does nothing as far as I've tried
+# codegen-units = 1 # This should apparently bring down binary size even more, but does nothing as far as I've tried
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ['-Oz', '--dce']
@@ -23,9 +23,10 @@ wasm-opt = ['-Oz', '--dce']
 console_error_panic_hook = "0.1.6"
 once_cell = "1.3.1"
 path-clean = "0.1"
-serde-wasm-bindgen = "0.1.3"
+serde = {version = "1", features = ["derive"]}
+serde_json = "1"
 swc = "0.20.0"
 swc_common = "0.10.20"
 swc_ecmascript = "0.36.0"
-wasm-bindgen = "0.2"
+wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
 wasm-bindgen-futures = "0.4.8"
