--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ console_error_panic_hook = "0.1.6"
 once_cell = "1.3.1"
 path-clean = "0.1"
 serde = {version = "1", features = ["derive"]}
-serde_json = "1"
+serde-wasm-bindgen = "0.2.0"
 swc = "0.20.0"
 swc_common = "0.10.20"
 swc_ecmascript = "0.36.0"
