--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build:dev": "wasm-pack build --dev --no-typescript --target web --out-dir lib",
     "build:release": "wasm-pack build --release --no-typescript --target web --out-dir lib",
-    "gzip": "gzip pkg/wasm_bg.wasm -c > pkg/wasm_bg.wasm.gz",
-    "brotli": "brotli pkg/wasm_bg.wasm -c > pkg/wasm_bg.wasm.br",
+    "gzip": "gzip lib/wasm_bg.wasm -c > lib/wasm_bg.wasm.gz",
+    "brotli": "brotli lib/wasm_bg.wasm -c > lib/wasm_bg.wasm.br",
     "start": "parcel ./example/index.html"
   },
   "devDependencies": {
