--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,14 @@ crate-type = ["cdylib"]
 # See https://rustwasm.github.io/book/reference/code-size.html
 [profile.release]
 lto = true
-opt-level = 3
-# opt-level = 's' # Using s cares a bit about performance still
-# opt-level = 'z' # Using z reduces the bundle size with another 1.5Mb
+opt-level = 's'
+# opt-level = 3 # Max Speed
+# opt-level = 'z' # Min size
 # codegen-units = 1 # This should apparently bring down binary size even more, but does nothing as far as I've tried
 
 [package.metadata.wasm-pack.profile.release]
 # Oz = very smol, Os = smol, O = speedy, O3 = very speedy
-wasm-opt = ['-O3', '--dce']
+wasm-opt = ['-Os', '--dce']
 
 # wee_alloc does not improve performance... it even makes it slower...
 [dependencies]
