--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "wasm-pack": "^0.9.1"
   },
   "dependencies": {
-    "@babel/standalone": "^7.14.4"
+    "@babel/standalone": "^7.14.4",
+    "@swc/core": "^1.2.60",
+    "node-fetch": "^2.6.1"
   }
 }
